--- a/sections/references.bib
+++ b/sections/references.bib
@@ -180,5 +180,15 @@ author = {Yoshua Bengio}
  acmid = {1412074},
  publisher = {Elsevier Science Publishers B. V.},
  address = {Amsterdam, The Netherlands, The Netherlands},
- keywords = {Authorship, Categorization, Compositional representation, Content addressable memory, Elman network, Linguistic analysis, Personalized code, Polysemous word, Semantic search, Stylistic similarity, Word perception},
+ keywords = {Authorship, Categorization, Compositional representation, Content addressable memory, Elman network, Linguistic analysis, Personalized code, Polysemous word, Semantic search, Stylistic similarity, Word perception}
 } 
+
+@book{onehot,
+  Author = {David Harris and Sarah Harris},
+  Title = {Digital Design and Computer Architecture, Second Edition},
+  Publisher = {Morgan Kaufmann},
+  Year = {2012},
+  ISBN = {0123944244},
+  pages = {129},
+  URL = {https://www.amazon.com/Digital-Design-Computer-Architecture-Second/dp/0123944244?SubscriptionId=0JYN1NVW651KCA56C102&tag=techkie-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0123944244}
+}
