modifiche sezione Progetto e bibliografia

--- a/sections/progetto.tex
+++ b/sections/progetto.tex
@@ -159,18 +159,17 @@ Lo step finale consiste di un dense layer con distribuzione temporale che agisce
 
 In figura \ref{fig:autoencoder1} è mostrata la struttura di massima dell'autoencoder. Di seguito vengono illustrati in dettaglio le principali componenti che compongono l'\textit{autoencoder}. 
 
-\begin{figure}[p]
+
+\begin{figure}[htb]
     \centering
-	\input{sections/autoencoder_structure}
-    \caption{Struttura generica di un autoencoder, il quale mappa l'input $x$ in un output $r$ attraverso una rappresentazione codificata $h$}
+	\input{figures/autoencoder.tex}
+	\caption{Struttura generica di un autoencoder, il quale mappa l'input $x$ in un output $r$ attraverso una rappresentazione codificata $h$}
 \label{fig:autoencoder1}
 \end{figure}
 
-\subsubsection{Embedding Layer}
+\subsubsection{Encoder}
 
-\subsubsection{Rete Neurale Convoluzionale}
-
-\subsubsection{Long Short Term Machine}
+\subsubsection{Decoder}
 
 
 \section{Generative Adversarial Network}
