--- a/sections/references.bib
+++ b/sections/references.bib
@@ -183,7 +183,7 @@ author = {Yoshua Bengio}
  keywords = {Authorship, Categorization, Compositional representation, Content addressable memory, Elman network, Linguistic analysis, Personalized code, Polysemous word, Semantic search, Stylistic similarity, Word perception}
 } 
 
-@book{onehot,
+@Inbook{onehot,
   Author = {David Harris and Sarah Harris},
   Title = {Digital Design and Computer Architecture, Second Edition},
   Publisher = {Morgan Kaufmann},
