--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{tikz}
+\usepackage{tikzscale}
 
 % math packages
 \usepackage{amsmath}
