modifiche sezione Progetto e bibliografia

--- a/figures/autoencoder.tex
+++ b/figures/autoencoder.tex
@@ -1,9 +1,9 @@
-\usetikzlibrary{shapes,arrows,fit,calc,positioning}
-\usetikzlibrary{backgrounds}
+%\usetikzlibrary{shapes,arrows,fit,calc,positioning}
+%\usetikzlibrary{backgrounds}
 \tikzstyle{box} = [draw, rectangle, fill=white, rounded corners, thick, node distance=7em, text width=10em, text centered, minimum height=3.5em]
 \tikzstyle{container} = [draw, rectangle, dashed, inner sep=2em]
 \tikzstyle{line} = [draw, thick, -latex']
-\resizebox{10cm}{!}{%
+\resizebox{8cm}{!}{%
 \begin{tikzpicture}[auto]
     \node [box] (cnn) {Convolutional Filters};
     \coordinate[above of=cnn, node distance=7em](begin_enc);
