--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,8 @@
 \usepackage[T1]{fontenc}
 \usepackage{tikz}
 \usepackage{tikzscale}
+\usetikzlibrary{shapes,arrows,fit,calc,positioning}
+\usetikzlibrary{backgrounds}
 
 % math packages
 \usepackage{amsmath}
