--- a/figures/autoencoder_general.tex
+++ b/figures/autoencoder_general.tex
@@ -30,7 +30,7 @@
 	
 	
 	\node at (encoder.north west) [above right,node distance=0 and 0] {Encoder};
-	\node at (decoder.south east) [below left,node distance=0 and 0] {Encoder};
+	\node at (decoder.south east) [below left,node distance=0 and 0] {Decoder};
 	
 \end{tikzpicture}
 }
