--- a/sections/progetto.tex
+++ b/sections/progetto.tex
@@ -125,9 +125,9 @@ L'intento della rete neurale proposta è quello di classificare autonomamente do
 
 \subsection{Realizzazione Adversarial Learning}
 \label{adv}
-Ricerche precedenti hanno dimostrato che molti modelli di machine learning, incluse le reti neurali, sono vulnerabili agli \textit{adversarial examples} \cite{1312.6199},  \cite{1412.6572} . In particolare la ricerca proposta in \cite{1412.6572} introduce il metodo del \textit{fast gradient sign} per scoprire \textit{adversarial examples} perturbando un campione noto $x$ con una piccola quantità $\Delta x =  \in sign(\nabla_x J(\theta,x,y))$ dove $\theta$ rappresenta i parametri del modello e $J$ il costo necessario a classificare $x$ come $y$.
+Ricerche precedenti hanno dimostrato che molti modelli di machine learning, incluse le reti neurali, sono vulnerabili agli \textit{adversarial examples} \cite{1312.6199},  \cite{1412.6572}. In particolare la ricerca proposta in \cite{1412.6572} introduce il metodo del \textit{fast gradient sign} per scoprire \textit{adversarial examples} perturbando un campione noto $x$ con una piccola quantità $\Delta x =  \in sign(\nabla_x J(\theta,x,y))$ dove $\theta$ rappresenta i parametri del modello e $J$ il costo necessario a classificare $x$ come $y$.
 Separatamente \cite{1406.2661} propone l'uso di \textit{Generative Adversarial Network (abbr. GAN})  come \textit{framework} in grado di generare campioni artificiali provenienti dalla stessa distribuzione del training set.
-Le GAN incorporano due modelli: un generatore ed un discriminatore i quali competono in una serie di turni antagonisti. All'interno del contesto del lavoro presentato in questo elaborato, il generatore impara a creare nuovi domini artificiali mentre il discriminatore impara a distinguere tali domini artificiali da quelli reali. L'intento di tale lavoro è usare la GAN per produrre domini artificiali realistici e di conseguenza incrementare la precisione del classificatore presentato nella sezione precedente attraverso l'\textit{adversarial training}.
+Le \textit{GAN} incorporano due modelli: un generatore ed un discriminatore i quali competono in una serie di turni antagonisti. All'interno del contesto del lavoro presentato in questo elaborato, il generatore impara a creare nuovi domini artificiali mentre il discriminatore impara a distinguere tali domini artificiali da quelli reali. L'intento di tale lavoro è usare la \textit{GAN} per produrre domini artificiali realistici e di conseguenza incrementare la precisione del classificatore presentato nella sezione precedente attraverso l'\textit{adversarial training}.
 
 \section{Autoencoder}
 \label{autoencoder}
@@ -148,7 +148,7 @@ Tuttavia il reale obiettivo di un \textit{autoencoder }non è quello di imparare
 
 \subsection{Dataset Autoencoder}
 \label{datasetautoencoder}
-Il \textit{dataset} utilizzato per il training di tale \textit{autoencoder} è lo stesso mostrato nella sezione \ref{classificatorenninput}, in cui i domini sono mappati in vettori numerici, secondo il dizionario di caratteri ammissibili per i domini. Durante la fase di implementazione si è reso necessario un ulteriore \textit{step} di \textit{preprocessing}: i domini codificati in sequenze di valori interi sono stati ulteriormente codificati tramite il \textit{one hot encoding} \cite{onehot} in modo da formare un tensore 2D per ogni dominio, in cui ogni riga è formata da sequenze di bit a 0 tranne il carattere nella posizione indicata dal dizionario, il quale è indicato ad 1.
+Il \textit{dataset} utilizzato per il training di tale \textit{autoencoder} è lo stesso mostrato nella sezione \ref{classificatorenninput}, in cui i domini sono mappati in vettori numerici, secondo il dizionario di caratteri ammissibili per i domini. Durante la fase di implementazione si è reso necessario un ulteriore \textit{step} di \textit{preprocessing}: i domini codificati in sequenze di valori interi sono stati ulteriormente codificati tramite il \textit{one hot encoding} \cite{onehot} in modo da formare un tensore 2D per ogni dominio, in cui ogni riga è formata da sequenze di bit a 0 tranne il carattere nella posizione indicata dal dizionario, il quale è indicato ad 1. I domini così codificati vengono trattati come una sequenza temporale, in cui ogni \textit{step} è caratterizzato da un vettore nel quale è indicato a 1 quale carattere del dizionario $\mathbb{V}$ vi è rappresentato. 
 
 \todo{inserire tabella di esempio.}
 
@@ -159,40 +159,28 @@ Questo ulteriore passaggio è diventato necessario durante l'implementazione del
 \label{archautoencoder}
 L'architettura dell'\textit{encoder} in esame è lascamente ispirata al lavoro mostrato in \cite{1508.06615} mentre il \textit{decoder} è approssimativamente una immagine speculare dell'\textit{encoder}.
 
-Si indichi $\mathbb{V}$ come il set di caratteri validi per i domini di rete; l'\textit{encoder } contiene un primo livello di Embedding nel quale viene  imparata una mappatura lineare da $\mathbb{V} \mapsto \mathbb{R}^d$, risultando in un vettore d-dimensionale per ogni carattere del dominio. Successivamente vengono applicati dei filtri convoluzionali alle mappature precedenti con l'obiettivo di catturare n-grammi significativi all'interno dei domini reali. All'interno del filtro convoluzionale vengono selezionate le caratteristiche più importanti attraverso \textit{average pooling}. Il layer successivo di concatenazione assembla l'output dei diversi filtri in un tensore di dimensione ridotta rispetto all'input iniziale e lo passa ad una LSTM la quale accumula stato lungo la sequenza di caratteri e ritorna in uscita il dominio codificato in forma di vettore mono-dimensionale.
+Al domini codificati come indicato nella sezione precedente, vengono applicati dei filtri convoluzionali con l'obiettivo di catturare n-grammi significativi all'interno dei domini reali. Il layer successivo di concatenazione assembla l'output dei diversi filtri in un tensore di dimensione ridotta rispetto all'input iniziale e lo passa ad una LSTM la quale accumula stato lungo la sequenza di caratteri e ritorna in uscita il dominio codificato in forma di vettore mono-dimensionale.
 
 Il \textit{decoder} è lascamente l'inverso del processo di codifica: il dominio codificato dato in input viene ripetuto un numero di volte equivalente alla lunghezza massima di nome di dominio decisa a priori e passato ad una LSTM. La sequenza di emissioni da parte del layer LSTM viene fornita agli stessi filtri convoluzionali presenti all'interno dell'\textit{encoder}. Questo risulta in un vettore $\mathbb{V}$-dimensionale per ogni elemento della sequenza che compone il dominio.
 Lo step finale consiste di un dense layer con distribuzione temporale che agisce come regressore multinomiale. A causa dell'attivazione \textit{softmax} attuata sul \textit{dense layer}, l'output del decoder rappresenta una distribuzione multinomiale dei caratteri di $\mathbb{V}$ per ogni step temporale, la quale può essere campionata per produrre un nuovo nome di dominio contenente le caratteristiche principali dei nomi di dominio usati in input.
 
 In figura \ref{fig:autoencoder1} è mostrata la struttura di massima dell'autoencoder. Di seguito vengono illustrati in dettaglio le principali componenti che compongono l'\textit{autoencoder}. 
 
-\begin{figure}[p]
+\begin{figure}[hp]
     \centering
 	\input{figures/autoencoder.tex}
-	\caption{Struttura generica di un autoencoder, il quale mappa l'input $x$ in un output $r$ attraverso una rappresentazione codificata $h$}
+	\caption{Struttura dell'\textit{autoencoder} in esame. L'input in ingresso dato dai domini viene codificato attraverso l'\textit{encoder} e dato in ingresso al \textit{decoder} che ne genera una approssimazione}
 \label{fig:autoencoder1}
 \end{figure}
 
 \subsubsection{Encoder}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sit amet nibh nec justo suscipit porttitor. Vestibulum et turpis in orci volutpat interdum. Curabitur pellentesque augue eget justo elementum, sed pulvinar nisi suscipit. Proin fermentum pretium pharetra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut sollicitudin felis vel velit sollicitudin ullamcorper. Quisque facilisis feugiat quam, a gravida purus feugiat vitae.
+La composizione interna dell'\textit{encoder} è formata inizialmente da due diversi layer convoluzionali ad 1 dimensione: come mostrato in \cite{1508.06615} le reti convoluzionali sono in grado di cogliere le \textit{features} più importanti in una sequenza di caratteri. Ogni filtro all'interno della rete convoluzionale seleziona un n-gramma della dimensione della finestra.
 
-Aenean non pretium odio, ut consectetur neque. Nam euismod facilisis ex at varius. Phasellus eget congue ante, eu porta nisl. Quisque eu egestas libero. Curabitur eleifend sed enim quis vehicula. Nam ullamcorper purus nulla, at aliquet dui imperdiet sit amet. Phasellus eu pharetra mauris. Nulla nec enim ac dui maximus cursus. Cras gravida eros sit amet tellus faucibus, in consequat nunc blandit. Sed ullamcorper varius varius. Nullam sed mauris porttitor, egestas urna tincidunt, fermentum libero.
+average pooling
 
-Nulla faucibus tellus nec pharetra varius. Sed lacinia quam eu urna interdum, et pretium felis sagittis. Quisque quis tincidunt lectus. Mauris sit amet pellentesque purus. Phasellus tincidunt, eros ac sagittis mollis, lacus risus dignissim erat, non pretium arcu metus sit amet felis. Aenean ac nulla dolor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec dui nulla, consequat suscipit ex eu, faucibus accumsan felis. Ut egestas euismod arcu, porta sollicitudin tortor pretium vel. Nunc in fermentum justo. Aliquam egestas ullamcorper ex quis placerat. Donec vulputate turpis ut dolor dignissim iaculis ut ut ipsum. Aliquam eu odio elementum, porttitor lorem eget, euismod ex. Donec id mi vel quam cursus congue ac vitae libero. Nam a mi nec nunc pulvinar maximus.
 
-Mauris ultricies luctus erat, a elementum neque laoreet sit amet. Aliquam eget nisl bibendum, tristique velit accumsan, pharetra purus. Maecenas fermentum vel mi id ultrices. In eu lectus nulla. Nulla vitae lobortis turpis. Praesent nisl purus, vehicula at tincidunt sit amet, sodales sed eros. Praesent iaculis purus eu leo varius, at viverra justo tempor. Fusce accumsan id purus eu laoreet. Aliquam eu lacus bibendum, euismod odio in, bibendum neque. Integer tincidunt pharetra maximus. Nullam facilisis libero vel lacus tincidunt, malesuada dignissim dui malesuada. Ut dictum imperdiet vulputate. Fusce massa purus, molestie sit amet justo ut, porttitor lobortis justo. Sed maximus et velit a gravida.
-
-Nulla sed ligula eu tortor vulputate vulputate. Sed ullamcorper facilisis augue, congue tincidunt risus placerat a. Vivamus quis felis massa. Cras hendrerit ex laoreet venenatis varius. In vitae quam aliquet, finibus urna ut, convallis tortor. Donec eget mi nisi. Etiam commodo tortor vitae eleifend laoreet. Pellentesque a tristique nibh, a aliquam magna
 \subsubsection{Decoder}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sit amet nibh nec justo suscipit porttitor. Vestibulum et turpis in orci volutpat interdum. Curabitur pellentesque augue eget justo elementum, sed pulvinar nisi suscipit. Proin fermentum pretium pharetra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut sollicitudin felis vel velit sollicitudin ullamcorper. Quisque facilisis feugiat quam, a gravida purus feugiat vitae.
 
-Aenean non pretium odio, ut consectetur neque. Nam euismod facilisis ex at varius. Phasellus eget congue ante, eu porta nisl. Quisque eu egestas libero. Curabitur eleifend sed enim quis vehicula. Nam ullamcorper purus nulla, at aliquet dui imperdiet sit amet. Phasellus eu pharetra mauris. Nulla nec enim ac dui maximus cursus. Cras gravida eros sit amet tellus faucibus, in consequat nunc blandit. Sed ullamcorper varius varius. Nullam sed mauris porttitor, egestas urna tincidunt, fermentum libero.
-
-Nulla faucibus tellus nec pharetra varius. Sed lacinia quam eu urna interdum, et pretium felis sagittis. Quisque quis tincidunt lectus. Mauris sit amet pellentesque purus. Phasellus tincidunt, eros ac sagittis mollis, lacus risus dignissim erat, non pretium arcu metus sit amet felis. Aenean ac nulla dolor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec dui nulla, consequat suscipit ex eu, faucibus accumsan felis. Ut egestas euismod arcu, porta sollicitudin tortor pretium vel. Nunc in fermentum justo. Aliquam egestas ullamcorper ex quis placerat. Donec vulputate turpis ut dolor dignissim iaculis ut ut ipsum. Aliquam eu odio elementum, porttitor lorem eget, euismod ex. Donec id mi vel quam cursus congue ac vitae libero. Nam a mi nec nunc pulvinar maximus.
-
-Mauris ultricies luctus erat, a elementum neque laoreet sit amet. Aliquam eget nisl bibendum, tristique velit accumsan, pharetra purus. Maecenas fermentum vel mi id ultrices. In eu lectus nulla. Nulla vitae lobortis turpis. Praesent nisl purus, vehicula at tincidunt sit amet, sodales sed eros. Praesent iaculis purus eu leo varius, at viverra justo tempor. Fusce accumsan id purus eu laoreet. Aliquam eu lacus bibendum, euismod odio in, bibendum neque. Integer tincidunt pharetra maximus. Nullam facilisis libero vel lacus tincidunt, malesuada dignissim dui malesuada. Ut dictum imperdiet vulputate. Fusce massa purus, molestie sit amet justo ut, porttitor lobortis justo. Sed maximus et velit a gravida.
-
-Nulla sed ligula eu tortor vulputate vulputate. Sed ullamcorper facilisis augue, congue tincidunt risus placerat a. Vivamus quis felis massa. Cras hendrerit ex laoreet venenatis varius. In vitae quam aliquet, finibus urna ut, convallis tortor. Donec eget mi nisi. Etiam commodo tortor vitae eleifend laoreet. Pellentesque a tristique nibh, a aliquam magna
 
 \section{Generative Adversarial Network}
 \label{advinterno}
