--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,7 @@
 \usepackage{url}
 \usepackage[hidelinks]{hyperref}
 \usepackage{todonotes}
+\usepackage{float}
 % custom colors
 \usepackage{color}
 \definecolor{light-gray}{gray}{0.96}
